tests/example_policies/tests-different-topologies/namedPorts-policy4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-based-on-port_number
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      ports:
      - port: 44134
        protocol: TCP
