tests/example_policies/tests-different-topologies/new1.yaml
# UI -> Command
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: UItoCommand
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: account-command-selector
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: bank-ui-selector
      ports:
        - port: 8080
          protocol: UDP
        - port: 8080
          protocol: TCP
        - port: 9090
          protocol: TCP
---
# Query to UI
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: QuerytoUI
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: account-query-selector
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: bank-ui-selector
