tests/example_policies/tests-different-topologies/policy_b_ipBlock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-from-ip-block-to2
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app-2
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 10.0.0.0/8
          except:
          - 10.11.0.0/16
      ports:
        - port: 53
          protocol: UDP
