tests/example_policies/tests-different-topologies/semanticDiff-IpBlocks-different-topologies-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - ../withIpBlock/withIpBlock-networkpolicy1.yaml
    expectedWarnings: 0

  - name: np2
    networkPolicyList:
      - ../withIpBlock/withIpBlock-networkpolicy2.yaml
    expectedWarnings: 0

  - name: np3
    networkPolicyList:
      - ../withIpBlock/withIpBlock-networkpolicy3.yaml
    expectedWarnings: 0

  - name: np4
    networkPolicyList:
      - ../withIpBlock/withIpBlock-networkpolicy4.yaml
    expectedWarnings: 0

queries:
  - name: semantic_diff_ipblocks_equivalence
    semanticDiff:
      - np1
      - np2
      - np3
    expected: 4
  - name: semantic_diff_ipblocks_np4_with_itself
    semanticDiff:
      - np4
      - np4
    expected: 0
  - name: semantic_diff_ipblocks_np1_np4
    semanticDiff:
      - np1
      - np4
    expected: 4
  - name: semantic_diff_ipblocks_np1_np2
    semanticDiff:
      - np1
      - np2
    expected: 2
